// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifGrid /> debe de mostrar items cuando se cargan imagenes con nuestro custom hook  1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    One punch
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Cualquier Cosa"
      url="https://localhost:"
    />
    <GifGridItem
      id="123"
      key="123"
      title="Cualquier Cosa"
      url="https://localhost:"
    />
  </div>
</Fragment>
`;

exports[`Pruebas en <GifGrid /> debe de obtener el snapshot del componente montado 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    One punch
  </h3>
  <p
    className="animate__animated animate__flash"
  >
     Loading ...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
